site-title-utility: initial working

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -76,6 +76,18 @@
   </div>
 </header>
 
+<!-- site-title-utility -->
+<div class="uq-site-title">
+  <div class="uq-site-title__content">
+    <div class="uq-site-title__title">
+      <a class="uq-site-title__title__link" href="https://uq.edu.au">Site title</a>
+    </div>
+    <div class="uq-site-title__actions">
+      <div><a href="#">Utility action [icon]</a></div>
+    </div>
+  </div>
+</div>
+
 <!-- main-menu -->
 <div id="main-menu" class="main-menu">
   <div class="main-menu__mobile-menu hide-for-large-up">
