footer, storybook-html: fix footer CSS classes

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -2,16 +2,16 @@
 <footer class="uq-footer" data-gtm-category="Footer">
     <div class="uq-footer__content">
   
-      <div class="uq-flex-container">
-          <div class="uq-flex-item">
-              <div class="uq-acknowledgement-statement">
+      <div class="uq-footer__flex-container">
+          <div class="uq-footer__flex-item">
+              <div class="uq-footer__acknowledgement-statement">
                   UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-acknowledgement-statement__link">Reconciliation statement</a>
               </div>
           </div>
       </div>
   
-      <div class="uq-flex-container">
-          <div class="uq-flex-item">
+      <div class="uq-footer__flex-container">
+          <div class="uq-footer__flex-item">
               <div class="uq-footer__copyright">© The University of Queensland</div>
               <div class="uq-footer__contact">
                   Enquiries: <a href="tel:+61733651111" class="uq-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="uq-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
@@ -21,7 +21,7 @@
                   <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
               </div>
           </div>
-          <div class="uq-flex-item">
+          <div class="uq-footer__flex-item">
               <div class="uq-footer__emergency-contact uq-footer__aside">
                       <strong class="uq-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="uq-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
                 {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
@@ -30,26 +30,26 @@
       </div>
       
       <div class="uq-footer__footer">
-        <div class="uq-flex-container">
-            <div class="uq-flex-item">
-                <div class="uq-menu-footer">
-                    <ul class="uq-menu-footer__list">
-                        <li class="uq-menu-footer__item">
-                            <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+        <div class="uq-footer__flex-container">
+            <div class="uq-footer__flex-item">
+                <div class="uq-footer__footer-menu">
+                    <ul class="uq-footer__footer-menu__list">
+                        <li class="uq-footer__footer-menu__item">
+                            <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
                         </li>
-                        <li class="uq-menu-footer__item">
-                            <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
+                        <li class="uq-footer__footer-menu__item">
+                            <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
                         </li>
-                        <li class="uq-menu-footer__item">
-                            <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+                        <li class="uq-footer__footer-menu__item">
+                            <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
                         </li>
-                        <li class="uq-menu-footer__item">
-                            <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                        <li class="uq-footer__footer-menu__item">
+                            <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="uq-flex-item">
+            <div class="uq-footer__flex-item">
                 <a href="" class="uq-footer__login-link uq-footer__aside" rel="nofollow">Login</a>
             </div>
         </div>
