--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -8,18 +8,22 @@
     background: $uq-purple-gradient;
     color: $site-footer-color;
     font-size: $site-footer-font-size;
+    
     &--full-width {
         padding: 0 1rem;
     }
+
     a {
         color: $site-footer-link-color;
         font-weight: 500;
         text-decoration: none;
     }
+
     abbr[title] {
         text-decoration: none;
     }
-    .uq-acknowledgement-statement {
+
+    &__acknowledgement-statement {
         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
         color: $site-footer-color;
         font-family: $merriweather;
@@ -37,33 +41,39 @@
             font-style: normal;
         }
     }
+
     &__content {
         padding: 3rem 0;
         max-width: $row-width;
         margin: 0 auto;
     }
-    .uq-flex-container {
+
+    &__flex-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .uq-flex-item {
+
+    &__flex-item {
         flex: 1 1 auto;
         width: 100%;
         padding: 0 $column-gutter / 2;
+
         @media #{$medium-up} {
             flex: 3 1 auto;
             width: 75%;
         }
-    }
-    .uq-flex-item + .uq-flex-item {
-        flex: 1 1 auto;
-        width: 100%;
-        @media #{$medium-up} {
+
+        & + .uq-footer__flex-item {
             flex: 1 1 auto;
-            width: 25%;
+            width: 100%;
+            @media #{$medium-up} {
+                flex: 1 1 auto;
+                width: 25%;
+            }
         }
     }
+
     &__aside {
         display: inline-block;
         margin: 1.5rem 0 0 0;
@@ -71,15 +81,17 @@
             margin: 0;
         }
     }
+
     &__sub-title {
         color: $site-footer-link-color;
         font-size: 1.125em;
     }
+
     &__footer {
         margin: 2rem 0 0 0;
         overflow: hidden;
 
-        .uq-flex-item + .uq-flex-item {
+        .uq-footer__flex-item + .uq-footer__flex-item {
             flex: 1 1 auto;
             width: 100%;
             @media #{$large-up} {
@@ -88,7 +100,8 @@
             }
         }
     }
-    .uq-menu-footer {
+
+    &__footer-menu {
         &__list {
             display: flex;
             flex-wrap: wrap;
@@ -97,22 +110,25 @@
             padding: 0;
             li {
                 padding-left: var(--space--md);
-                &+:before {
+
+                & + :before {
                     content: " | ";
                     padding-right: var(--space--md);
                 }
+                
                 &:first-of-type {
                     padding-left: 0;
                 }
             }
         }
     }
-    .uq-social-media {
+    
+    &__social-media {
         font-size: 1.5rem;
         &__list {
             @include inline-list();
         }
-        &__item+.uq-social-media__item::before {
+        &__item + .uq-footer__social-media__item::before {
             content: " ";
             display: inline-block;
             margin: 0 .5rem 0 0;
@@ -123,46 +139,5 @@
                 transition: all ease .5s;
             }
         }
-    }
-}
-
-// OLA local footer for minimal footer full-width demo --- DELETE LATER
-#footer {
-    font-size: 14px;
-    border-top: 1px solid #ddd;
-    overflow: hidden;
-    padding: 20px 0;
-}
-
-#footer ul {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 0;
-    margin-right: 25px;
-}
-
-#footer ul li {
-    border-left: 1px solid #ddd;
-    float: right;
-    line-height: 150%;
-    margin-left: 25px;
-    padding-left: 25px;
-}
-
-#footer ul li.uq-footer-support {
-    border-left-width: 0;
-    float: left;
-    padding-left: 0;
-}
-
-@media screen and (max-width: 992px) {
-    #footer ul li.uq-footer-support {
-        float: none;
-    }
-    #footer ul li {
-        border: 0;
-        float: none;
-        margin: 0 0 0 15px;
-        padding: 0;
     }
 }
