header: align to foundation-grid pkg

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -12,7 +12,7 @@
         position: relative;
         max-width: 1140px;
         margin: 0 auto;
-        padding: 0 1.5rem;
+        padding: 0 $column-gutter / 2;
 
         .nav-global {
             display: flex;
