--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -14,6 +14,7 @@
 // Foundation 5.5.3 default styling of the body tag.
 body {
   background-color: transparent !important;
+  margin: 0;
 }
 
 // For centerStory decorator
