--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -20,6 +20,10 @@
         color: $site-footer-link-color;
         font-weight: 500;
         text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     abbr[title] {
