--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -1,18 +1,27 @@
-@use '@uqmchu/core/src/scss/_global' as *;
-@use '@uqmchu/foundation-global/src/scss/global' as *;
+@use '@uqmchu/core/src/scss/global' as core;
+@use '@uqmchu/foundation-global/src/scss/global' as fnd-global;
+@use '@uqmchu/foundation-grid/src/scss/global' as fnd-grid;
 @use 'global' as *;
 
 //
 // Global UQ site header
 //
 .header {
-    background: $uq-purple;
-    background: $uq-purple-gradient;
+    background: core.$uq-purple;
+    background: core.$uq-purple-gradient;
+    font-family: core.$font-body;
+    font-weight: fnd-global.$body-font-weight;
+    line-height: core.$compass-base-line-height;
+
+    *, *:before, *:after {
+        box-sizing: border-box;
+    }
+
     &__container {
         position: relative;
-        max-width: 1140px;
+        max-width: fnd-grid.$row-width;
         margin: 0 auto;
-        padding: 0 $column-gutter / 2;
+        padding: 0 fnd-global.$column-gutter / 2;
 
         .nav-global {
             display: flex;
@@ -31,7 +40,7 @@
 
                 li {
                     display: none;
-                    @media #{$large-up} {
+                    @media #{fnd-global.$large-up} {
                         display: inline;
                         margin-left: 1.5rem;
                         word-wrap: break-word;
@@ -120,7 +129,7 @@
 
             &__title {
                 color: white;
-                font-family: $merriweather;
+                font-family: core.$merriweather;
                 font-size: 1.25rem;
                 font-style: italic;
                 font-weight: 400;
@@ -133,7 +142,7 @@
                 vertical-align: middle;
 
                 & .nav-search__radio-wrapper {
-                    @media #{$medium-up} {
+                    @media #{fnd-global.$medium-up} {
                         display: inline-block;
                     }
                 }
@@ -141,7 +150,7 @@
                 & .form-item {
                     margin-top: .5rem;
                                 
-                    @media #{$medium-up} {
+                    @media #{fnd-global.$medium-up} {
                         display: inline-block;
                         padding-left: 1rem;
                         margin-top: 0;
@@ -227,7 +236,7 @@
                 -moz-column-count: 3;
                 column-count: 3;
                 padding-top: 1.5rem;
-                @media #{$large-up} {
+                @media #{fnd-global.$large-up} {
                     display: none;
                 }
                 ul {
@@ -258,10 +267,10 @@
         margin: 0;
         font-size: 1.25rem;
         font-weight: 500;
-        color: $uq-purple;
+        color: core.$uq-purple;
         
         &:hover {
-            color: $uq-purple;
+            color: core.$uq-purple;
             text-decoration: none;
         }
     }
@@ -276,7 +285,7 @@
 
 .logo--large {
     display: none;
-    @media #{$large-up} {
+    @media #{fnd-global.$large-up} {
         display: block;
     }
     & img {
@@ -286,7 +295,7 @@
 }
 
 .logo--small {
-    @media #{$large-up} {
+    @media #{fnd-global.$large-up} {
         display: none;
     }
     & img {
