--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -1,6 +1,6 @@
 <!-- header -->
-<header class="header">
-  <div class="header__container">
+<header class="uq-header">
+  <div class="uq-header__container">
       <div class="nav-global">
           <div class="logo">
               <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
